--- a/Client/FunnySongs/package.json
+++ b/Client/FunnySongs/package.json
@@ -14,8 +14,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.9",
-    "@mui/material": "^5.15.9",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
