--- a/Client/FunnySongs/package.json
+++ b/Client/FunnySongs/package.json
@@ -24,7 +24,9 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "styled-components": "^6.1.8"
+    "react-toastify": "^10.0.4",
+    "styled-components": "^6.1.8",
+    "use-history": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
