--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "utils": "^0.3.1"
   }
 }
