--- a/Client/FunnySongs/package.json
+++ b/Client/FunnySongs/package.json
@@ -20,9 +20,12 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.5",
+    "progressbar.js": "^1.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
