--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "joi": "^17.12.2",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3",
     "router": "^1.3.8"
