--- a/Client/FunnySongs/package.json
+++ b/Client/FunnySongs/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.5",
     "joi": "^17.12.2",
+    "js-cookie": "^3.0.5",
     "progressbar.js": "^1.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
